# resume_analyzer

./: Home.py  main.py  pyproject.toml  requirements.txt  tp.py
pages/: 1_Resume_Parser.py  2_ATS_Score.py  3_Job_Postings.py
utils/: agents.py  get_details.py  read_resume.py  text_decor.py
