[project]
name = "parserenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.9",
    "ddgs>=9.14.4",
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "langchain>=1.3.2",
    "langgraph>=1.2.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "streamlit>=1.57.0",
]
